# my-own-list

./: .coverage  :memory  :memoty  main.py  pyproject.toml
app/: app.py  schemas.py
my_own_list/: app.py  schemas.py
tests/: conftest.py  test_app.py  test_db.py
